change the scrollbar for chrome and some fixes

--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,34 @@ url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swa
   font-family: 'Inter', sans-serif;
 }
 
+  /* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 100vw;
+  /* margin-block: .5em; */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(16,126,16,.7);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0,0,0,.7);
+}
+
+
+body {
+  overflow-x: hidden;
+  overflow-y: overlay;
+}
+
 /* Margem e padding reset */
 body, h1, h2, h3, h4, h5, p, li, ul {
   margin: 0;
