--- a/src/LandPage.css
+++ b/src/LandPage.css
@@ -9,6 +9,8 @@
 .bg-landpage {
   background: linear-gradient(to left, rgba(255,255,255,1) 20%, rgba(230,230,230,1) 50%, rgba(255,255,255,1) 80%);
   padding-top: 40px;
+  width: 100%;
+  margin: 0 auto;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, .15);
 }
 
