--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,7 @@
 .bg-navbar {
   width: 100%;
   height: 60px;
-  margin-bottom: 1px;
+  margin: 0 auto 1px auto;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, .15);
   z-index: 3;
 }
